# zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile  configuration.yaml
.github/workflows/: audit.yaml  general.yaml
.sqlx/: query-442f7eb6011592b6e20abe225a781315473b96984553966c58f78db3eeb47bf9.json  query-f793fd8d87300acb321fa75184e35dcf16c45bfdd30a551907a3f8ced90dfab2.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20250611100007_create_subscription_tokens_table.sql
scripts/: .env  .env.example  docker-compose.yml  init-db.sh  pre-commit.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
